src/components/ConvexSearch/styles.css
.cs-root {
  --cs-backdrop-bg: #47133b80;
  --cs-dialog-content-bg: linear-gradient(to bottom, #f6f6f6, #e5e5e5);
  --cs-dialog-content-shadow: inset 1px 1px 0 0 hsla(0, 0%, 100%, 0.5),
    0 3px 8px 0 #797979;
  --cs-dialog-zIndex: 1000;
  --cs-hit-bg: #ffffff;
  --cs-hit-border-active: #8b8b8e;
  --cs-hit-border: #e5e5e5;
  --cs-hit-content-text: #111111;
  --cs-hit-title-text: #111111;
  --cs-key-bg: linear-gradient(-225deg, #e5e5e5, #f6f6f6);
  --cs-key-shadow: inset 0 -2px 0 0 #c2c2c2, inset 0 0 1px 1px #fff,
    0 1px 2px 1px rgba(30, 35, 90, 0.4);
  --cs-markdown-code-bg: #141414;
  --cs-results-header-button-text: #141414;
  --cs-results-header-button-underline: #3f3f3f;
  --cs-search-bg: #ffffff;
  --cs-search-border: #2122b5;
  --cs-search-placeholder: #797979;
  --cs-search-text: #292929;
  --cs-searchButton-bg: #f1f1f1;
  --cs-searchButton-border: #8d2676;
  --cs-searchButton-keyboard-bg: #d7d7d7;
  --cs-searchButton-keyboard-text: #6e6e6e;
  --cs-searchButton-text: #797979;
}

.cs-searchButton {
  align-items: center;
  background-color: var(--cs-searchButton-bg);
  border-radius: 0.5rem;
  border: 0;
  border: 2px solid var(--cs-searchButton-bg);
  display: flex;
  flex-direction: row;
  font-size: 0.875rem;
  gap: 0.25rem;
  padding: 0.5rem;
  transition: all 0.2s ease-in-out;
  font-family: Inter, sans-serif;
}

.cs-searchButton:hover,
.cs-searchButton:focus {
  background: transparent;
  border-color: var(--cs-searchButton-border);
  cursor: pointer;
}

.cs-searchButton-icon {
  color: var(--cs-searchButton-text);
  flex-shrink: 0;
  height: 1.5rem;
  width: 1.5rem;
}

.cs-searchButton-label {
  display: none;
}

.cs-searchButton-shortcut {
  display: none;
}

@media (min-width: 540px) {
  .cs-searchButton-label {
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--cs-searchButton-text);
    padding-right: 0.25rem;
  }
}

@media (min-width: 768px) {
  .cs-searchButton-shortcut {
    display: block;
    background-color: var(--cs-searchButton-keyboard-bg);
    color: var(--cs-searchButton-keyboard-text);
    padding: 0.25rem;
    border-radius: 0.25rem;
    font-size: 0.75rem;
  }
}

.cs-dialog {
  height: 100vh;
  left: 0;
  overflow-y: auto;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: var(--cs-dialog-zIndex);
}

.cs-dialog-content {
  background: var(--cs-dialog-content-bg);
  height: 100%;
  padding: 1rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.cs-dialog-header {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
}

.cs-dialog-searchBox {
  flex-grow: 1;
}

.cs-dialog-closeButton {
  background: none;
  border: none;
  font-family: Inter, sans-serif;
  cursor: pointer;
}

.cs-dialog-backdrop {
  display: none;
}

@media (min-width: 768px) {
  .cs-dialog {
    display: flex;
    justify-content: center;
  }

  .cs-dialog-content {
    border-radius: 0.5rem;
    box-shadow: var(--cs-dialog-content-shadow);
    height: min(80vh, 60rem);
    margin-top: 5rem;
    width: min(80vw, 60rem);
    z-index: calc(var(--cs-dialog-zIndex) + 1);
  }

  .cs-dialog-content.cs-dialog-content--empty {
    height: 5rem;
  }

  .cs-dialog-closeButton {
    display: none;
  }

  .cs-dialog-backdrop {
    background-color: var(--cs-backdrop-bg);
    bottom: 0;
    display: block;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    border: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
  }
}

.cs-search {
  border: 2px solid #292929;
  border-radius: 0.25rem;
  display: flex;
  flex-direction: row;
  padding: 0.5rem;
  justify-content: center;
  gap: 0.25rem;
  background-color: var(--cs-search-bg);
}

.cs-search:focus-within {
  border-color: var(--cs-search-border);
}

.cs-search-icon {
  width: 28px;
  height: 28px;
}

.cs-search-input {
  background: transparent;
  border: none;
  flex-grow: 1;
  font-size: 1.125rem;
  font-family: Inter, sans-serif;
  color: var(--cs-search-text);
}

.cs-search-input:focus {
  outline: none;
}

.cs-search-input::placeholder {
  color: var(--cs-search-placeholder);
}

.cs-search-clearButton {
  border: none;
  background: none;
  padding: 0 0.25rem;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.cs-search-clearIcon {
  width: 16px;
  height: 16px;
}

.cs-results {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  gap: 0.75rem;
  flex-grow: 1;
}

.cs-results-header {
  display: flex;
  flex-direction: row;
  gap: 0.75rem;
}

.cs-results-header-button {
  border: none;
  background: none;
  font-family: Inter, sans-serif;
  font-size: 1.125rem;
  cursor: pointer;
  padding: 0.25rem 0;
  border-bottom: 2px solid transparent;
  transition: border-color 0.2s ease-in-out;
  color: var(--cs-results-header-button-text);
}

.cs-results-header-button.cs-results-header-button--selected {
  border-color: var(--cs-results-header-button-underline);
}

.cs-results-container {
  overflow-y: auto;
  flex-grow: 1;
}

.cs-hitList {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 0;
  gap: 0.5rem;
  margin: 0;
}

.cs-hitList-item {
  border: 2px solid var(--cs-hit-border);
  border-radius: 0.25rem;
  overflow: hidden;
}

.cs-hitList-item--selected {
  border-color: var(--cs-hit-border-active);
}

.cs-hit {
  background: var(--cs-hit-bg);
  padding: 0.5rem 0.75rem;
  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  display: flex;
  flex-direction: column;
}

.cs-hit:hover {
  text-decoration: none;
}

.cs-hit:focus {
  outline: none;
}

.cs-hit-title {
  font-weight: bold;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin-bottom: 0.5rem;
  color: var(--cs-hit-title-text);
}

.cs-hit-content {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  color: var(--cs-hit-content-text);
  line-height: 1.5;
}

.cs-hit-thread {
  padding: 0.5rem 0 0 0;
}

.cs-hit-message {
  display: flex;
  align-items: flex-start;
  gap: 0.5rem;
}

.cs-hit-message:not(:last-of-type) {
  margin-bottom: 0.5rem;
}

.cs-hit-message-avatar {
  border-radius: 50%;
  flex-shrink: 0;
  background-color: #292929;
}

.cs-hit-message-wrapper {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  gap: 0.25rem;
  width: 100%;
}

.cs-hit-message-author {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.cs-markdown p {
  padding: 0;
  margin: 0;
  line-height: 1.375;
  margin-bottom: 0.5rem;
}

.cs-markdown-code {
  margin-bottom: 1rem;
  max-height: 18rem;
  overflow-x: auto;
  border-radius: 0.5rem;
  padding: 0;
}

.cs-markdown-code pre {
  color: #d7d7d7;
  margin: 0;
  background-color: var(--cs-markdown-code-bg);
  padding: 0.75rem;
}

.cs-keyboardLegend {
  display: none;
}

@media (min-width: 768px) {
  .cs-keyboardLegend {
    display: flex;
    flex-direction: row;
    gap: 1rem;
  }

  .cs-keyboardLegend-section {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .cs-keyboardLegend-key {
    align-items: center;
    background: var(--cs-key-bg);
    border-radius: 0.125rem;
    box-shadow: var(--cs-key-shadow);
    display: flex;
    height: 1.125rem;
    justify-content: center;
    margin-right: 0.4em;
    padding: 0 0 1px;
    color: #939393;
    border: 0;
    width: 1.25rem;
  }

  .cs-keyboardLegend-label {
    font-size: 0.75rem;
    color: #6e6e6e;
  }
}

